tests/failed/04-excepted-endian-identifier.stderr
error: excepted endian identifier
 --> $DIR/04-excepted-endian-identifier.rs:4:1
  |
4 | #[endian()]
  | ^^^^^^^^^^^
